# link-to-notion

./: Cargo.toml  README.md
src/: entities.rs  main.rs
