[package]
name = "link-to-notion"
version = "0.1.0"
authors = ["F. Cauteruccio <f.cauteruccio@gmail.com>"]
edition = "2018"

[[bin]]
name = "l2n"
path = "src/main.rs"

[dependencies]
clap = "2.32"
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
